# JSMin

./: Makefile.am  README.markdown  configure.ac
jsmin/: Makefile.am  jsmin.c  jsmin.h  macros.h  main.c  stream.c  stream.h
tests/: test-001.js
